# renewabl-test

./: .clippy.toml  .codespellrc  .dockerignore  .env.sample  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  Tiltfile  diesel.toml  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.config/: nextest.toml
.github/: actionlint.yaml
.github/workflows/: api-ci.yaml  dependency-review.yml  lint.yaml  nightly-cargo-audit.yaml  test-workflow.yml
db/migrations/2025-01-01-000001_create_energy_readings/: down.sql  up.sql
db/migrations/2025-01-01-000002_create_query_history/: up.sql
db/scripts/: init-readonly-local.sql
libs/excel_client/: Cargo.toml
libs/excel_client/src/: client.rs  error.rs  lib.rs
libs/excel_client/src/models/: record.rs
libs/excel_client/src/tests/: client_tests.rs
libs/postgres_models/: Cargo.toml
libs/postgres_models/src/: connection.rs  lib.rs  schema.rs
libs/postgres_models/src/models/: energy_readings.rs  mod.rs  query_history.rs
libs/redis_cache/: Cargo.toml
libs/redis_cache/src/: connection.rs  lib.rs
libs/telemetry/: Cargo.toml
libs/telemetry/src/metrics/: mod.rs  runtime.rs  system.rs  traits.rs
libs/utils/: Cargo.toml
libs/utils/src/: database.rs  secrets.rs
monitoring/alertmanager/: config.yml
monitoring/grafana/dashboards/: db.json  grafana.json  prometheus.json  redis.json
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml  web-config.yml
postman/: renweabl-backend.postman_collection.json
scripts/: prometheus-setup.sh  run_migration.sh  setup.sh  update_schemas.sh
services/api/server/: .dockerignore  Cargo.toml  Dockerfile
services/api/server/src/: data_loader.rs  health.rs  lib.rs  main.rs  metrics.rs  openapi.rs  shutdown.rs
services/api/server/src/shared/errors/: base.rs  common.rs  conversion.rs  mod.rs
services/api/server/src/shared/extractors/: cache.rs  database.rs  error.rs  mod.rs  payload.rs  request_id.rs  validations.rs
services/api/server/src/wire_api/: error_recorder.rs  errors.rs  mod.rs  wire_error.rs  wire_error_v1.rs
services/api/server/src/wire_api/core/v1/: mod.rs
services/api/server/src/wire_api/core/v1/energy/: mod.rs
services/api/server/src/wire_api/core/v1/energy/aggregate/: errors.rs  handler.rs  mod.rs  models.rs
services/api/server/src/wire_api/core/v1/energy/history/: errors.rs  handler.rs  models.rs
services/api/server/src/wire_api/core/v1/types/: mod.rs
src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  store.rs
tests/: integration_test.rs
