[workspace]
resolver = "3"
members = [
  "libs/postgres_models",
  "libs/redis_cache",
  "libs/excel_client",
  "libs/telemetry",
  "services/api/server",
  "libs/utils",
]

[workspace.package]
authors = ["Evgeni Pirianov"]
edition = "2024"
homepage = "https://evgenipirianvov.com/"
keywords = ["interview", "test"]
license = "Apache-2.0"
repository = "https://github.com/BatiGencho/renewabl-test"
rust-version = "1.92.0"
version = "1.0.0"

# This is just documentation, not used by Cargo directly
[workspace.metadata.test-config]
exclude = []

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
axum = { version = "0.8.4", features = ["macros"] }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-redis = { version = "0.20.0", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
derive_more = { version = "2.0", features = ["full"] }
diesel = { version = "2.2.8", features = [
  "chrono",
  "numeric",
  "serde_json",
  "uuid",
] }
diesel-async = { version = "0.5.2", features = [
  "postgres",
  "pool",
  "bb8",
  "async-connection-wrapper",
] }
diesel_migrations = { version = "2.2.0" }
dotenv = "0.15.0"
futures = "0.3.31"
parking_lot = { version = "0.12", features = ["serde"] }
pretty_assertions = "1.4"
prometheus = { version = "0.14", features = ["process"] }
rand = "0.9.1"
rust_decimal = "1.37.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.149"
serde_prometheus = "0.2"
sysinfo = "0.29"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.19", features = [
  "time",
  "env-filter",
  "json",
] }
utoipa = { version = "5.2", features = ["chrono", "uuid"] }
uuid = { version = "1.15.1", features = ["v4", "v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

# Local deps
excel_client = { path = "libs/excel_client" }
postgres_models = { path = "libs/postgres_models" }
redis_cache = { path = "libs/redis_cache" }
telemetry = { path = "libs/telemetry" }
utils = { path = "libs/utils" }

# Workspace projects
[workspace.metadata.cargo-machete]
ignored = ["anyhow", "tokio"]

[profile.release]
codegen-units = 1
incremental = false
debug = 0
lto = "thin"
opt-level = 3
panic = 'unwind'
strip = true

[profile.dev]
incremental = true
lto = false
opt-level = 0
split-debuginfo = "unpacked"

[profile.test]
doctest = false
