[package]
name = "excel_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
calamine = { version = "0.33.0", features = ["dates"] }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
