[package]
name = "postgres_models"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7.15"
tracing = { workspace = true }
uuid = { workspace = true }
