[package]
name = "redis_cache"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
