[package]
name = "utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aws-config = "1.6.2"
aws-sdk-secretsmanager = "1.71.0"
postgres_models = { workspace = true }
redis_cache = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
